# canora

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
canora/: Cargo.toml
canora-python/: Cargo.toml
canora-python/src/: analyze.rs  beat.rs  error.rs  filters.rs  lib.rs  onset.rs
canora-python/src/core/: audio.rs  convert.rs  mod.rs  spectrum.rs
canora-python/src/feature/: spectral.rs
canora/benches/: bench_cqt.rs  bench_sequence.rs  bench_stft.rs  bench_utils.rs
canora/src/: analyze.rs  beat.rs  decompose.rs  effects.rs  error.rs  lib.rs  onset.rs  segment.rs  sequence.rs  types.rs
canora/src/core/: audio.rs  constantq.rs  convert.rs  fft.rs  harmonic.rs  mod.rs  notation.rs  pitch.rs  spectrum.rs
canora/src/dsp/: extrema.rs  iir.rs  windows.rs
canora/src/feature/: inverse.rs  rhythm.rs  spectral.rs
canora/src/util/: matching.rs  utils.rs
examples/: analyze_album.py  benchmark_vs_librosa.py
python/canora/: __init__.py  __init__.pyi  display.py
python/sonara/: __init__.py  __init__.pyi  _result.py  display.py
sonara/: Cargo.toml
sonara-python/: Cargo.toml
sonara-python/src/: analyze.rs  beat.rs  effects.rs  error.rs  filters.rs  lib.rs  onset.rs  util.rs
sonara-python/src/core/: audio.rs  convert.rs  spectrum.rs
sonara-python/src/feature/: mod.rs  rhythm.rs  spectral.rs
sonara/benches/: bench_analyze.rs  bench_cqt.rs  bench_sequence.rs  bench_stft.rs  bench_utils.rs
sonara/examples/: test_playlist_100.rs
sonara/src/: analyze.rs  beat.rs  decompose.rs  effects.rs  error.rs  filters.rs  lib.rs  onset.rs  perceptual.rs  segment.rs  sequence.rs  types.rs
sonara/src/core/: audio.rs  constantq.rs  (+7 more)
sonara/tests/: accuracy.rs
tests/python/: test_api.py
(+11 files in other folders)
